--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 
     box-sizing: border-box;
     scroll-behavior: smooth;
-    
+
     font-family: 'Roboto', sans-serif;
 
 }
@@ -462,25 +462,25 @@
     transform: scale(1.02);
 }
 
-#feedback{
+#feedback {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.feedback_line{
+.feedback_line {
     width: 395px;
     border: 1px solid red;
 
     text-align: center;
 }
 
-.feedback_line > img{
-   background-color: red ;
-   height: 20px;
+.feedback_line>img {
+    background-color: red;
+    height: 20px;
 }
 
-.feedback_Show{
+.feedback_Show {
     height: 40vh;
     width: 395px;
     background-color: yellow;
@@ -497,7 +497,11 @@
 .footer {
     height: 6vh;
     width: 100%;
-    background-image: linear-gradient(to left, #553c9a, #b393d3);
+    /* background-image: linear-gradient(to left, #553c9a, #b393d3); */
+
+    padding: 1vw;
+
+    background-color: #14248A;
 
     text-align: center;
     font-size: 2rem;
@@ -508,7 +512,7 @@
 }
 
 /* This class style used in search result --> */
-.use_in_search_result{
+.use_in_search_result {
     border: 1px solid darkmagenta;
     border-radius: 5vh;
     background-color: #fff;
@@ -516,32 +520,161 @@
 }
 
 
+footer {
+    height: 90vh;
+    width: 100%;
+    background-color: #14248A;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+
+footer>.left {
+    height: 80vh;
+    width: 30%;
+    background-color: yellow;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 2vh;
+
+}
+
+
+
+.left_content_foot {
+    height: 98%;
+    width: 99%;
+    border-radius: 2vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+
+    background-color: #14248A;
+
+}
+
+.left_content_foot>h1 {
+    font-weight: 800;
+    font-size: 2.5rem;
+}
+
+#feed_msg {
+    resize: none;
+}
+
+.feed_form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#feed_radio {
+    padding: 0 5vh;
+}
+
+footer>.right {
+    height: 40vh;
+    width: 45%;
+    background-color: yellow;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 2vh;
+
+}
+
+.right_content_foot {
+    height: 99%;
+    width: 97%;
+
+    background-color: #14248A;
+    border-radius: 2vh;
+    padding: 2vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.dev_img_social {
+    width: 95%;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+#about_img {
+    height: 11vw;
+    width: 11vw;
+    border-radius: 50%;
+    border: 1px solid skyblue;
+    object-fit: initial;
+}
+
+.dev_img_social>div {
+    padding: 5vh 0;
+}
+
+
+.dev_img_social>div>h1 {
+    color: white;
+    font-size: 2.5rem;
+}
+
+.logos {
+    margin: 2vh;
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.dev_info {
+    width: 75%;
+    text-align: center;
+    color: white;
+}
+
+
+
 /* Error box  */
 
-.error_altert{
+.error_altert {
     width: 50vh;
     padding: 0.5vh;
     height: 20vh;
     border-radius: 1vh;
     box-sizing: border-box;
-    position: fixed ;
+    position: fixed;
     background-color: darkblue;
     left: 37%;
     top: 40%;
     z-index: 20;
 
-    visibility:hidden;
+    visibility: hidden;
 }
 
-.error_altert > div{
+.error_altert>div {
     border: 1px solid darkblue;
     height: 19vh;
     border-radius: 1vh;
     background-color: white;
 }
 
-#cancel{
-    position:relative;
+#cancel {
+    position: relative;
     display: flex;
     justify-content: center;
     /* background-color: red; */
@@ -550,11 +683,9 @@
     color: white;
 }
 
-#cancel:hover{
+#cancel:hover {
     background-color: rgb(82, 82, 193);
 }
-
-
 
 
 /* Css for mobile screen here ------------------------------------------------------------------------> */
@@ -562,7 +693,7 @@
 
 @media (max-width: 445px) {
     body {
-        background-image: linear-gradient(to right, #CCCCFF, #FFFFFF); 
+        background-image: linear-gradient(to right, #CCCCFF, #FFFFFF);
     }
 
     #header>h1 {
@@ -571,7 +702,8 @@
         word-spacing: 2px;
         text-align: center;
     }
-    .nav{
+
+    .nav {
         display: flex;
         justify-content: center;
         height: 4vh;
@@ -609,7 +741,7 @@
         padding-bottom: 7vh;
     }
 
-    .intro>.right>img{
+    .intro>.right>img {
         width: 100%;
     }
 
@@ -635,7 +767,7 @@
 
     .regestation>.right {
         width: 80%;
-        padding: 2vh ;
+        padding: 2vh;
         justify-content: center;
     }
 
@@ -660,7 +792,7 @@
 
 
     .get_clg_details {
-        margin:  5vh 0;
+        margin: 5vh 0;
         justify-content: center;
         /* Change to centre above */
 
@@ -685,7 +817,7 @@
         display: flex;
         flex-direction: column-reverse;
         width: 80%;
-       
+
     }
 
 
@@ -697,7 +829,7 @@
 
     }
 
-    
+
     .allContent_create_clg>.left {
         width: 100%;
         font-size: 0.5rem;
@@ -714,25 +846,80 @@
 
     }
 
-    #create_clg_btn{
-    width: 20vw;
-    height: 4vh;
-    font-size: 0.8rem;
-    font-weight: 400;
-    letter-spacing: 2px;
+    #create_clg_btn {
+        width: 20vw;
+        height: 4vh;
+        font-size: 0.8rem;
+        font-weight: 400;
+        letter-spacing: 2px;
     }
 
 
-    .footer{
+    .footer {
         height: 4vh;
         margin-top: 5vh;
         font-size: 1.3rem;
         letter-spacing: 0;
         word-spacing: 0;
         text-align: center;
+
     }
 
-    .error_altert{
+
+    footer {
+        flex-direction: column;
+        height: auto;
+        padding: 2vh 0;
+    }
+
+    footer>.left {
+        width: 85%;
+        height: auto;
+        margin: 5vh 0;
+
+    }
+
+    .left_content_foot {
+        display: block;
+        padding: 2vh;
+    }
+
+    #feed_msg {
+        width: 35vh;
+
+    }
+
+    footer>.right {
+        width: 85%;
+    }
+
+    .dev_img_social {
+        height: 17vh;
+    }
+
+    #about_img {
+        height: 30vw;
+        width: 30vw;
+    }
+
+    .dev_img_social>div>h1 {
+        color: white;
+        font-size: 1rem;
+    }
+
+    .logos {
+        margin: 1vh 0.5vh;
+        height: 20px;
+        width: 20px;
+        background-color: #fff;
+        border-radius: 10px;
+    }
+
+    .dev_info{
+        font-size: 0.7rem;
+    }
+
+    .error_altert {
         width: 40vh;
         left: 10%;
         top: 60%;
@@ -744,12 +931,12 @@
 
 
 
-@media(min-width: 445px) and (max-width: 1022px) {
+@media(min-width: 440px) and (max-width: 1022px) {
     body {
-        background-image: linear-gradient(to right, #CCCCFF, #FFFFFF); 
+        background-image: linear-gradient(to right, #CCCCFF, #FFFFFF);
     }
 
-    .nav{
+    .nav {
         display: flex;
         justify-content: center;
         height: 5vh;
@@ -798,7 +985,7 @@
 
     .regestation>.right {
         width: 80%;
-        padding: 2vh ;
+        padding: 2vh;
         justify-content: center;
     }
 
@@ -838,7 +1025,7 @@
         justify-content: center;
     }
 
-    
+
     .allContent_create_clg {
         display: flex;
         flex-direction: column-reverse;
@@ -847,7 +1034,7 @@
     }
 
 
-    
+
     .allContent_create_clg>.right {
         width: 100%;
         margin-bottom: 7vh;
@@ -856,14 +1043,14 @@
 
     }
 
-    
+
     .allContent_create_clg>.left {
         width: 100%;
         font-size: 0.5rem;
         height: 50vh;
     }
 
-    
+
     .clg_create_from>div>label {
         font-size: 20px;
     }
@@ -873,7 +1060,7 @@
 
     }
 
-    #create_clg_btn{
+    #create_clg_btn {
         width: 20vw;
         height: 4vh;
         font-size: 0.8rem;
@@ -882,13 +1069,67 @@
     }
 
 
-    .footer{
+    .footer {
         height: 4vh;
         margin-top: 5vh;
         font-size: 1.3rem;
         letter-spacing: 5px;
         word-spacing: 10px;
         text-align: center;
+    }
+
+
+    footer {
+        flex-direction: column;
+        height: auto;
+        padding: 2vh 0;
+    }
+
+    footer>.left {
+        width: 65%;
+        height: auto;
+        margin: 5vh;
+
+    }
+
+    .left_content_foot {
+        padding: 2vh;
+    }
+
+    #feed_msg {
+        width: 55vh;
+    }
+
+    footer>.right {
+       
+        width: 85%;
+    }
+
+    
+    .dev_img_social {
+        height: 25vh;
+    }
+
+    #about_img {
+        height: 20vw;
+        width: 20vw;
+    }
+
+    .dev_img_social>div>h1 {
+        color: white;
+        font-size: 2rem;
+    }
+
+    .logos {
+        margin: 1vh ;
+        height: 30px;
+        width: 30px;
+        background-color: #fff;
+        border-radius: 10px;
+    }
+
+    .dev_info{
+        font-size: 1rem;
     }
 
 
