--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,8 @@
 
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     position: sticky;
     top: 0;
@@ -81,6 +83,21 @@
 
 .nav>ul>li {
     list-style: none;
+
+}
+
+
+
+#progress_top{
+    width: 0;
+    height: 2px;
+    background-color: yellow;
+    position: fixed;
+    top:0;
+
+    display: none;
+
+    z-index: 100;
 
 }
 
@@ -519,7 +536,7 @@
 
 
 footer {
-    height: 90vh;
+    height: 95vh;
     width: 100%;
     background-color: #14248A;
 
@@ -531,10 +548,10 @@ footer {
 
 
 footer>.left {
-    height: 75vh;
+    height: 85vh;
     width: 30%;
     background-color: yellow;
-
+    margin: 15vh 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -596,7 +613,7 @@ footer>.left {
 #feed_name{
   
     height: 4vh;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 
 
@@ -607,6 +624,7 @@ footer>.left {
 #feed_msg {
     resize: none;
     font-size: 1rem;
+    padding: 1vh;
 }
 
 #feed_msg:active{
@@ -631,6 +649,18 @@ footer>.left {
 #feed_submit_btn:active{
     color: white;
 }
+
+#progress_feed {
+    height: 5px;
+    width: 100%;
+    border-radius: 2vh;
+    margin: 1vh 0;
+    background-image: linear-gradient(to right, tomato,cyan);
+    visibility: hidden;
+    animation: progressForLoadData 0.5s infinite alternate-reverse ease-in-out;
+}
+
+
 
 footer>.right {
     height: 40vh;
@@ -672,6 +702,17 @@ footer>.right {
     border-radius: 50%;
     border: 1px solid skyblue;
     object-fit: initial;
+
+    transition: ease-in-out , border-radius  0.5s , transform 0.5s;
+
+}
+
+#about_img:hover{
+    border-top: 4px solid red;
+    border-bottom: 4px solid red;
+    border-radius: 2vh;
+    transform: scale(1.4);
+
 }
 
 .dev_img_social>div {
@@ -690,10 +731,12 @@ footer>.right {
     width: 40px;
     background-color: #fff;
     border-radius: 10px;
+
+    transition: ease-in-out  transform 0.15s;
 }
 
 .logos:hover{
-    transform: scale(1.3);
+    transform: scale(1.4);
 }
 
 .dev_info {
@@ -702,6 +745,22 @@ footer>.right {
     color: white;
 }
 
+
+
+/* scroll to top */
+
+
+#top_scroll_btn{
+    height: 7vh;
+    width: 7vh;
+
+    background-color: transparent;
+
+    position: fixed;
+    bottom: 70px;
+    right: 50px;
+
+}
 
 
 /* Error box  */
@@ -931,7 +990,7 @@ footer>.right {
         width: 85%;
         height: auto;
         margin: 10vh 0;
-        height: 80vh;
+        height: 85vh;
 
     }
 
@@ -984,6 +1043,14 @@ footer>.right {
         font-size: 0.7rem;
     }
 
+    #top_scroll_btn{
+        bottom: 50px;
+        right: 20px;
+    
+    }
+    
+    
+
     .error_altert {
         width: 40vh;
         left: 10%;
@@ -996,7 +1063,7 @@ footer>.right {
 
 
 
-@media(min-width: 440px) and (max-width: 1022px) {
+@media(min-width: 440px) and (max-width: 1024px) {
     body {
         background-image: linear-gradient(to right, #CCCCFF, #FFFFFF);
     }
@@ -1153,8 +1220,8 @@ footer>.right {
     footer>.left {
         width: 65%;
         height: auto;
-        margin: 5vh;
-        height: 80vh;
+        margin: 10vh;
+        height: 85vh;
     }
 
     .left_content_foot {
