--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,15 @@
 * {
     margin: 0;
     padding: 0;
-
     box-sizing: border-box;
     scroll-behavior: smooth;
-
     font-family: 'Roboto', sans-serif;
+}
 
+
+*::selection{
+    color: transparent;
+    /* background-color: transparent; */
 }
 
 
@@ -101,7 +104,7 @@
     width: 45%;
     padding: 2.5vh ;    
     font-size: 1.1rem;
-    
+
     height: auto;
     display: flex;
     justify-items: center;
@@ -561,7 +564,22 @@ footer>.left {
     border: 1px solid white;
     padding: 1vh;
     border-radius: 1vh;
-    transition: ease-in-out border-radius .3s;
+    
+
+    transition: ease-in color  3s , ease-in  background-color 3s , ease-in-out border-radius 0.3s ;
+    
+}
+
+.feed_form:hover{
+    border-radius: 5vh;
+    background-color: rgba(113, 239, 239, 0.482);
+    color: black;
+    font-weight: 500;
+}
+
+.feed_form input:active{
+    background-color: cyan;
+    padding: 0 .5vh;
 }
 
 .feed_form>h1 {
@@ -577,15 +595,6 @@ footer>.left {
 }
 
 
-.feed_form:hover{
-    border-radius: 5vh;
-}
-
-.feed_form input:active{
-    background-color: cyan;
-    padding: 0 .5vh;
-}
-
 #feed_name{
     height: 4vh;
     font-size: 1.2rem;
@@ -595,6 +604,7 @@ footer>.left {
 
 #feed_radio {
     padding: 0 5vh;
+    font-weight: bolder;
 }
 
 #feed_msg {
@@ -710,6 +720,10 @@ footer>.right {
 
 .logos:hover{
     transform: scale(1.4);
+}
+
+.logos:active{
+    background-color: yellow;
 }
 
 .dev_info {
@@ -838,11 +852,8 @@ footer>.right {
     background-color: yellow;
     position: fixed;
     top:0;
-
     display: none;
-
     z-index: 100;
-
 }
 
 
@@ -858,7 +869,14 @@ footer>.right {
     position: fixed;
     bottom: 70px;
     right: 50px;
+}
 
+#top_scroll_btn:hover{
+    transform: scale(1.1);
+}
+
+#top_scroll_btn:active{
+    background-color: red;
 }
 
 
@@ -929,8 +947,8 @@ footer>.right {
     }
 
     .nav>ul {
-        width: 90%;
-        font-size: 0.6rem;
+        width: 95%;
+        font-size: 0.55rem;
     }
 
 
@@ -1222,7 +1240,7 @@ footer>.right {
 
     .regestation>.left {
         width: 70%;
-        height: 70vh;
+        height: auto;
         align-items: center;
         border-radius: 0;
         margin: 5vh 0;
